# testGobject

./: CMakeLists.txt  README.md  main.c
src/: animal-dog.c  animal-dog.h  animal.c  animal.h
